--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<div id="physics-quiz-container" style="min-height: 750px; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; display: flex; align-items: center; justify-content: center; padding: 20px;">
+<div id="physics-quiz-container" style="min-height: auto; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; display: flex; align-items: flex-start; justify-content: center; padding: 10px 20px;">
     <div id="start-screen" class="quiz-box">
         <h1 style="color: #fff; margin-bottom: 10px;">GCSE Equation Master</h1>
         <p style="color: #eee; margin-bottom: 25px;">15 Questions • 4 Attempts • Real-time Feedback</p>
