--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <div id="physics-quiz-container" style="min-height: auto; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; display: flex; align-items: flex-start; justify-content: center; padding: 10px 20px;">
     <div id="start-screen" class="quiz-box">
-        <h1 style="color: #fff; margin-bottom: 10px;">GCSE Equation Master</h1>
-        <p style="color: #eee; margin-bottom: 25px;">15 Questions • 4 Attempts • Real-time Feedback</p>
+        <h1 style="color: #fff; margin-bottom: 10px;">GCSE Physics Formula Drill</h1>
+        <p style="color: #eee; margin-bottom: 25px;">15 Questions • 4 Attempts per question • Real-time Feedback</p>
         <button onclick="quiz.start()" class="primary-btn">Start Game</button>
     </div>
 
